[gd_scene load_steps=20 format=2]

[ext_resource path="res://gui/fontSmall.tres" type="DynamicFont" id=1]
[ext_resource path="res://templates/Level/GUI/gui_addon_hp.png" type="Texture" id=2]
[ext_resource path="res://templates/Level/GUI/gui.png" type="Texture" id=3]
[ext_resource path="res://templates/Level/hp_bar.png" type="Texture" id=4]
[ext_resource path="res://templates/Level/GUI/gui_hp.png" type="Texture" id=5]
[ext_resource path="res://templates/Level/GUI/GUI.gd" type="Script" id=6]
[ext_resource path="res://objects/Book/pu_books.png" type="Texture" id=7]
[ext_resource path="res://objects/Rune/rune_hp.png" type="Texture" id=8]
[ext_resource path="res://objects/Rune/rune_attack.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 42, 0, 6, 7 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 36, 0, 6, 7 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 30, 0, 6, 7 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 6, 7 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 18, 0, 6, 7 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 12, 0, 6, 7 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 24, 0, 6, 7 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 6, 0, 6, 7 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "gray",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "black",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "white",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "water",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "dark",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "earth",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "none",
"speed": 5.0
} ]

[sub_resource type="Animation" id=10]
resource_name = "red_to_black"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossStats" type="Control" parent="."]
margin_right = 240.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BossStats"]
margin_top = 5.0
margin_right = 240.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 1 )
text = "TEST"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBarBackgroud" type="ColorRect" parent="BossStats"]
margin_right = 240.0
margin_bottom = 5.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" type="TextureRect" parent="BossStats"]
margin_right = 240.0
margin_bottom = 5.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStats" type="Control" parent="."]
margin_left = 240.0
margin_right = 400.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUIBackground" type="TextureRect" parent="PlayerStats"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookSlot" type="AnimatedSprite" parent="PlayerStats" groups=[
"book_slot",
]]
position = Vector2( 148, 151 )
frames = SubResource( 9 )
animation = "none"

[node name="HP" type="Control" parent="PlayerStats"]
margin_left = 27.0
margin_top = 20.0
margin_right = 139.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" type="TextureProgress" parent="PlayerStats/HP"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 1.0
margin_bottom = 10.0
rect_scale = Vector2( 112, 1 )
value = 100.0
texture_progress = ExtResource( 5 )

[node name="HPBarOverlay" type="TextureRect" parent="PlayerStats/HP"]
margin_right = 112.0
margin_bottom = 10.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPRunes" type="Control" parent="PlayerStats"]
margin_left = 29.0
margin_top = 40.0
margin_right = 81.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rune1" type="TextureRect" parent="PlayerStats/HPRunes"]
margin_left = 2.0
margin_top = 2.0
margin_right = 9.0
margin_bottom = 9.0
texture = ExtResource( 8 )

[node name="Rune2" type="TextureRect" parent="PlayerStats/HPRunes"]
margin_left = 22.0
margin_top = 2.0
margin_right = 29.0
margin_bottom = 9.0
texture = ExtResource( 8 )

[node name="Rune3" type="TextureRect" parent="PlayerStats/HPRunes"]
margin_left = 42.0
margin_top = 2.0
margin_right = 49.0
margin_bottom = 9.0
texture = ExtResource( 8 )

[node name="AttackRunes" type="Control" parent="PlayerStats"]
margin_left = 17.0
margin_top = 174.0
margin_right = 133.0
margin_bottom = 281.0

[node name="Rune1" type="TextureRect" parent="PlayerStats/AttackRunes"]
margin_left = 84.0
margin_top = 4.0
margin_right = 91.0
margin_bottom = 11.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rune2" type="TextureRect" parent="PlayerStats/AttackRunes"]
margin_left = 33.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 11.0
texture = ExtResource( 9 )

[node name="Rune3" type="TextureRect" parent="PlayerStats/AttackRunes"]
margin_left = 105.0
margin_top = 58.0
margin_right = 112.0
margin_bottom = 65.0
texture = ExtResource( 9 )

[node name="Rune4" type="TextureRect" parent="PlayerStats/AttackRunes"]
margin_left = 56.0
margin_top = 96.0
margin_right = 63.0
margin_bottom = 103.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rune5" type="TextureRect" parent="PlayerStats/AttackRunes"]
margin_left = 4.0
margin_top = 63.0
margin_right = 11.0
margin_bottom = 70.0
texture = ExtResource( 9 )

[node name="GameOver" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOver"]
anims/red_to_black = SubResource( 10 )

[node name="ColorRect" type="ColorRect" parent="GameOver"]
margin_right = 240.0
margin_bottom = 300.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOver"]
margin_right = 240.0
margin_bottom = 180.0
text = "GAME_OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
margin_top = 144.0
margin_right = 240.0
margin_bottom = 300.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="GameOver/VBoxContainer"]
margin_left = 99.0
margin_top = 60.0
margin_right = 141.0
margin_bottom = 76.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "RETRY"

[node name="MainMenu" type="Button" parent="GameOver/VBoxContainer"]
margin_left = 87.0
margin_top = 80.0
margin_right = 153.0
margin_bottom = 96.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "MAIN_MENU"
[connection signal="pressed" from="GameOver/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
